--- a/views/admin/editPage.ejs
+++ b/views/admin/editPage.ejs
@@ -1,8 +1,8 @@
 <%- include ('../layouts/adminHeader') -%>
-    <h2 class="page-title">Add a page</h2>
+    <h2 class="page-title">Edit a page</h2>
     <a href="/admin/pages" class="btn btn-outline-primary">Back to all pages</a>
     <br /><br />
-    <form method="POST" action="/admin/pages/add-page">
+    <form method="POST" action="/admin/pages/edit-page/<%= slug %>">
         <div class="form-group">
             <label for="">Title</label>
             <input type="text" class="form-control" name="title" value="<%= title %>" placeholder="Title" />
@@ -15,6 +15,7 @@
             <label for="">Content</label>
             <textarea id="ta" class="form-control" name="content" cols="30" rows="10" placeholder="Content"><%= content %></textarea>
         </div>
+        <input type="hidden" name="id" value="<%= id %>" />
         <button type="submit" class="btn btn-outline-success">Submit</button>
     </form>
 <%- include ('../layouts/adminFooter') -%>
