--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -3,7 +3,7 @@
     <a href="/admin/pages/add-page" class="btn btn-outline-primary">Add a new page</a>
     <br /><br />
 
-    <table class="table table-striped">
+    <table class="table table-striped sorting">
     	<thead>
     		<tr class="home">
     			<th>Title</th>
@@ -19,7 +19,7 @@
 				<% if (page.slug === "home") { %>
 					<td></td>
 				<% } else { %>
-					<td><a href="/admin/pages/delete-page/<%= page._id %>">Delete</a></td>
+					<td><a class="confirmDeletion" href="/admin/pages/delete-page/<%= page._id %>">Delete</a></td>
 				<% } %>
 			</tr>
     		<% }) %>
