--- a/views/layouts/adminHeader.ejs
+++ b/views/layouts/adminHeader.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/admin.css">
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 
@@ -21,6 +22,9 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/admin/pages">Pages</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/admin/categories">Categories</a>
                 </li>
             </ul>
         </div>
